--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,6 +1,6 @@
 <h1>Home</h1>
-<div class="">
-  <div class="home">
+<div id="home">
+  <div class="intro">
     <h2>Fhin</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus
       vero odit eligendi, nobis aperiam enim, voluptatum vitae in, officiis nam
@@ -25,4 +25,14 @@
         eligendi iste repellat. Debitis esse iusto animi sequi beatae ad minus.</p>
     </div>
   </article>
+  <div id="images">
+    <img
+      src="https://ezella.fr/wp-content/uploads/2020/10/Fhin-Trauma-Delicieuse-Music_%C2%A9Idriss-Arin.jpg"
+      alt="Fhin picture"
+    />
+    <img
+      src="https://i1.sndcdn.com/avatars-LYiBmQuvzDa6woGF-CThFcw-t500x500.jpg"
+      alt="Fhin picture"
+    />
+  </div>
 </div>
